--- a/Vídeos.html
+++ b/Vídeos.html
@@ -22,10 +22,10 @@
                 <span id="hamburger"></span>
             </button>
             <ul id="menu" role="menu">
-                <li><a class="linkMenu" href="index.html">Home</a></li>
+                <li><a class="linkMenu" href="./index.html">Home</a></li>
                 <li><a class="linkMenu" href="#">Fofos</a></li>
-                <li><a class="linkMenu" href="#">Desenhos</a></li>
-                <li><a class="linkMenu" href="#">Estranhos</a></li>
+                <li><a class="linkMenu" href="./Produtos.html">Produtos</a></li>
+                <li><a class="linkMenu" href="./contato.html">Contato</a></li>
                 <li><a class="linkMenu" href="./Vídeos.html">Vídeos</a></li>
                 <li><a class="linkMenu" href="#">Sobre Nós</a></li>
             </ul>
