--- a/contato.html
+++ b/contato.html
@@ -129,12 +129,10 @@
                 <!-- Início Mídias Sociais -->
                 <div class="col-md-4">
                     <figure class="redes-sociais">
-                        <a href="https://www.facebook.com"> <img src="./img/rede_social/face.png" alt="Facebook"></a>
-                        <a href="https://instagram.com/totozinh0_o?igshid=NGVhN2U2NjQ0Yg=="> <img
-                                src="./img/rede_social/insta.png" alt="Instagram"></a>
-                        <a href="https://www.youtube.com"> <img src="./img/rede_social/youtube.png" alt="Youtube"></a>
-                        <a href="https://www.linkedin.com"> <img src="./img/rede_social/linkedin.png"
-                                alt="Linkedin"></a>
+                        <a href="https://instagram.com/totozinh0_o?igshid=NGVhN2U2NjQ0Yg=="> <img src="./img/rede_social/face.png" alt="Facebook"></a>
+                        <a href="https://instagram.com/totozinh0_o?igshid=NGVhN2U2NjQ0Yg=="> <img src="./img/rede_social/insta.png" alt="Instagram"></a>
+                        <a href="https://instagram.com/totozinh0_o?igshid=NGVhN2U2NjQ0Yg=="> <img src="./img/rede_social/youtube.png" alt="Youtube"></a>
+                        <a href="https://instagram.com/totozinh0_o?igshid=NGVhN2U2NjQ0Yg=="> <img src="./img/rede_social/linkedin.png" alt="Linkedin"></a>
                     </figure>
                     <br>
                     <a class="linkFooter" href="./index.html">Home</a>
