--- a/index.html
+++ b/index.html
@@ -23,11 +23,9 @@
             </button>
             <ul id="menu" role="menu">
                 <li><a class="linkMenu" href="./index.html">Home</a></li>
-                <li><a class="linkMenu" href="#">Fofos</a></li>
                 <li><a class="linkMenu" href="./Produtos.html">Produtos</a></li>
                 <li><a class="linkMenu" href="./contato.html">Contato</a></li>
                 <li><a class="linkMenu" href="./Vídeos.html">Vídeos</a></li>
-                <li><a class="linkMenu" href="#">Sobre Nós</a></li>
             </ul>
         </nav>
     </header>
@@ -355,11 +353,9 @@
                     </figure>
                     <br>
                     <a class="linkFooter" href="./index.html">Home</a>
-                    <a class="linkFooter" href="./fofos.html">Fofos</a>
-                    <a class="linkFooter" href="./desenhos.html">Desenhos</a>
-                    <a class="linkFooter" href="./estranhos.html">Estranhos</a>
-                    <a class="linkFooter" href="./videos.html">Vídeos</a>
-                    <a class="linkFooter" href="./sobre.html">Sobre nós</a>
+                    <a class="linkFooter" href="./Produtos.html">Produtos</a>
+                    <a class="linkFooter" href="./contato.html">Contato</a>
+                    <a class="linkFooter" href="./Vídeos.html">Vídeos</a>
 
                 </div>
                 <!-- Alt + Shift + o clique do mouse, seleciona varias linhas -->
